--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node src/App.js"
+   
+    "start": "node src/App.js"
+
   },
   "dependencies": {
     "axios": "^0.19.2",
